--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <li><a href="#section1">Power-Boiler</a></li>
                         <li><a href="#section2">Exchanger-Cooling</a></li>
                         <li><a href="#section3">Technology</a></li>
-                        <li><a href="#contact">Contact</a></li>  
+                        <li><a href="#section4">Contact</a></li>  
                     </ul>
                 </div><!-- /.navbar-collapse -->
         </nav>
